<?xml version="1.0" encoding="utf-8" standalone="no"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/common_action_bar"
    android:orientation="vertical"
    android:padding="@dimen/common_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/common_margin"
        android:paddingRight="@dimen/common_margin">

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/common_common_dialog_verify_password40"
            android:textColor="@color/common_text"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cancel_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/common_common_dialog_verify_password60"
            android:textColor="@color/common_hint" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/common_divider" />


    <LinearLayout
        android:id="@+id/ps_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/common_margin"
        android:paddingRight="@dimen/common_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/common_common_dialog_verify_password130"
            android:textColor="@color/common_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/common_edt_line_bg"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ps_edt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/common_common_dialog_verify_password170"
                android:inputType="textPassword"
                android:textColor="@color/common_text"
                android:textColorHint="@color/common_hint"
                android:textSize="14sp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/sms_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/common_margin"
        android:paddingRight="@dimen/common_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/common_common_dialog_verify_password230"
            android:textColor="@color/common_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/common_edt_line_bg"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/sms_code_edt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/common_common_dialog_verify_password270"
                android:inputType="number"
                android:textColor="@color/common_text"
                android:textColorHint="@color/common_hint"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/get_code_tv"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:background="@drawable/common_tip_border_50"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/common_baseActivity2"
                android:textColor="@color/common_tip" />
        </LinearLayout>


    </LinearLayout>



    <LinearLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:paddingLeft="@dimen/common_margin"
        android:paddingRight="@dimen/common_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/common_verify_email"
            android:textColor="@color/common_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/common_edt_line_bg"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/email_code_edt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/common_input_email_verify"
                android:inputType="number"
                android:textColor="@color/common_text"
                android:textColorHint="@color/common_hint"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/get_email_code_tv"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:background="@drawable/common_tip_border_50"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/common_baseActivity2"
                android:textColor="@color/common_tip" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/google_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/common_margin"
        android:paddingRight="@dimen/common_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/common_common_dialog_verify_password350"
            android:textColor="@color/common_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/common_edt_line_bg"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/google_code_edt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/common_common_dialog_verify_password390"
                android:inputType="number"
                android:textColor="@color/common_text"
                android:textColorHint="@color/common_hint"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/past_tv"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/common_common_dialog_verify_password410"
                android:textColor="@color/common_tip" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/common_tip_50"
        android:text="@string/common_common_dialog_verify_password450"
        android:textColor="@color/common_button_text" />
</LinearLayout>
