<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/common_bg_tips"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/common_margin"
        android:paddingRight="@dimen/common_margin"
        android:text="@string/kqgogle"
        android:textColor="@color/common_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/common_margin"
        android:paddingRight="@dimen/common_margin"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/common_common_dialog_verify_password350"
            android:textColor="@color/common_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/common_edt_line_bg"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/google_code_edt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/common_bg_gogle"
                android:hint="@string/common_common_dialog_verify_password390"
                android:inputType="number"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/common_text"
                android:textColorHint="@color/common_hint"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/past_tv"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/common_common_dialog_verify_password410"
                android:textColor="@color/common_tip"
                android:visibility="gone" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/common_margin"
        android:paddingRight="@dimen/common_margin"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/common_common_dialog_verify_sms"
            android:textColor="@color/common_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/common_bg_gogle"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/sms_code_edt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/common_ssetpwd"
                android:inputType="number"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/common_text"
                android:textColorHint="@color/common_hint"
                android:textSize="14sp" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/common_tip" />

            <TextView
                android:id="@+id/getCode"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/common_getcode"
                android:textColor="@color/common_tip"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <com.allen.library.SuperButton
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/common_cancle"
                android:textColor="@color/common_tip"
                app:sCornersRadius="5dp"
                app:sSolidColor="@color/white"
                app:sStrokeColor="@color/common_hint"
                app:sStrokeWidth="1dp" />

            <com.allen.library.SuperButton
                android:id="@+id/submit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/common_common_dialog_verify_password450"
                android:textColor="@color/white"
                app:sCornersRadius="5dp"
                app:sSolidColor="@color/common_tip"
                app:sStrokeColor="@color/common_hint"
                app:sStrokeWidth="1dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp" />


    </LinearLayout>

</LinearLayout>