<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_white_corner5"
    android:orientation="vertical"
    android:paddingBottom="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="124dp"
        android:background="@mipmap/common_version_top"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_version_update"
            android:textColor="@color/common_white"
            android:textSize="18sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="Version Update"
            android:textColor="@color/common_white"
            android:textSize="15sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/common_margin">

        <TextView
            android:id="@+id/update_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:minHeight="80dp"
            android:textColor="@color/common_text"
            android:textSize="14sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="130dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/common_hint_50"
                android:text="@string/common_cancle"
                android:textColor="@color/common_text"
                android:textSize="@dimen/sp_16" />

            <Button
                android:id="@+id/update_btn"
                android:layout_width="130dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:background="@drawable/common_tip_border_radius_50"
                android:text="@string/common_common_tip_dialog80"
                android:textColor="@color/common_white"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>